# nics-exemption-disabled-employees

./: README.md  pyproject.toml  run_pipeline.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.jsx  page.jsx
dashboard/public/data/: nics_exemption_results.json
dashboard/src/components/: BaselineTab.jsx  MethodologyTab.jsx  ReformTab.jsx
dashboard/src/lib/: dataHelpers.js
data/: nics_exemption_results.json
src/nics_exemption/: __init__.py  analysis.py  cli.py  dynamic.py  lfs.py  pipeline.py
tests/: test_analysis.py
